--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@mui/material": "^5.4.4",
     "@the-chat/ui-kit": "^1.1.9",
+    "@the-chat/utils": "^1.1.2",
     "next": "^12.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
