--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@the-chat/ui-kit": "^1.1.9",
     "@the-chat/utils": "^1.1.2",
     "next": "^12.1.0",
+    "next-pwa": "^5.4.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
