--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "dev": "next dev",
     "compile-locales": "node ./devUtils/compile-locales.mjs"
   },
   "dependencies": {
