--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "@mui/material": "^5.4.4",
+    "@the-chat/firebase": "^1.0.2",
     "@the-chat/ui-kit": "^1.2.6",
     "@the-chat/utils": "^1.1.2",
+    "firebase": "^9.6.8",
+    "firebase-admin": "^10.0.2",
     "next": "^12.1.0",
     "next-pwa": "^5.4.5",
     "react": "^17.0.2",
